Fix spacing and update top blurb

--- a/assets/main.css
+++ b/assets/main.css
@@ -257,6 +257,7 @@ a:hover {
 .infoblock .information {
   width: 100%;
   min-height: 21px;
+  margin-bottom: 1px;
 }
 
 .infoblock .status {
